--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python = "^3.10"
 pyrallis = "^0.3.1"
 python-dotenv = "^1.0.0"
 google-api-python-client = "^2.104.0"
+youtube-transcript-api = "^0.6.1"
+pydantic = "^2.4.2"
+unidecode = "^1.3.7"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
