--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-api-python-client = "^2.104.0"
 youtube-transcript-api = "^0.6.1"
 pydantic = "^2.4.2"
 unidecode = "^1.3.7"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
