--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ youtube-transcript-api = "^0.6.1"
 pydantic = "^2.4.2"
 unidecode = "^1.3.7"
 pyyaml = "^6.0.1"
+tiktoken = "^0.5.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
