--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic = "^2.4.2"
 unidecode = "^1.3.7"
 pyyaml = "^6.0.1"
 tiktoken = "^0.5.1"
+openai = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
