--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@
 # Data
 data/*.json
 data/transcripts/*.json
-data/base_summaries/*.json
-data/user_summaries/*.json
+data/summaries/*.json
 data/prompts/
 
 # Byte-compiled / optimized / DLL files
