--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ unidecode = "^1.3.7"
 pyyaml = "^6.0.1"
 tiktoken = "^0.5.1"
 openai = "^0.28.1"
+pendulum = "^2.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
