--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ exclude: ^(data/|tests/)
 default_language_version:
     python: python3.10
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
       - id: check-added-large-files
@@ -13,32 +13,17 @@ repos:
       - id: check-toml
       - id: end-of-file-fixer
       - id: trailing-whitespace
--   repo: https://github.com/asottile/pyupgrade
+  - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.0
     hooks:
     -   id: pyupgrade
--   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.3
     hooks:
-      - id: isort
--   repo: https://github.com/psf/black
-    rev: 23.10.1
-    hooks:
-      - id: black
--   repo: https://github.com/PyCQA/flake8
-    rev: 6.1.0
-    hooks:
-      - id: flake8
-        args:
-        - "--max-line-length=100"
-        - "--max-complexity=15"
-        - "--extend-ignore=E203"
-        additional_dependencies:
-        - flake8-bugbear
-        - flake8-comprehensions
-        - flake8-simplify
-        - pep8-naming
--   repo: https://github.com/python-poetry/poetry
+      - id: ruff
+        args: [--fix]
+      - id: ruff-format
+  - repo: https://github.com/python-poetry/poetry
     rev: 1.6.0
     hooks:
       - id: poetry-check
@@ -46,3 +31,12 @@ repos:
         args:
           - "--check"
           - "--no-update"
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.18.0
+    hooks:
+      - id: gitleaks
+  - repo: https://github.com/DavidAnson/markdownlint-cli2
+    rev: v0.10.0
+    hooks:
+      - id: markdownlint-cli2
+        args: [--fix]
