--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,11 @@ repos:
       - id: ruff
         args: [--fix]
       - id: ruff-format
+  - repo: https://github.com/DavidAnson/markdownlint-cli2
+    rev: v0.10.0
+    hooks:
+      - id: markdownlint-cli2
+        args: [--fix]
   - repo: https://github.com/python-poetry/poetry
     rev: 1.6.0
     hooks:
@@ -31,12 +36,7 @@ repos:
         args:
           - "--check"
           - "--no-update"
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.18.0
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.4.0
     hooks:
-      - id: gitleaks
-  - repo: https://github.com/DavidAnson/markdownlint-cli2
-    rev: v0.10.0
-    hooks:
-      - id: markdownlint-cli2
-        args: [--fix]
+      - id: detect-secrets
