--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ tiktoken = "^0.5.1"
 openai = "^0.28.1"
 pendulum = "^2.1.2"
 boto3 = "^1.28.71"
+mailchimp-marketing = "^3.0.80"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
