--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ openai = "^0.28.1"
 pendulum = "^2.1.2"
 boto3 = "^1.28.71"
 mailchimp-marketing = "^3.0.80"
+tqdm = "^4.66.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
