--- a/config/data.yaml
+++ b/config/data.yaml
@@ -2,3 +2,5 @@ user_groups: [0, 1, 2]
 min_video_duration: 2  # minimum video length in minutes
 number_of_topics: 3
 recent_videos_days_old: 7
+first_issue_date: "2023-11-01"
+timezone: "Europe/Paris"
