:art: Remove unecessary quote marks in yaml strings

--- a/config/data.yaml
+++ b/config/data.yaml
@@ -3,4 +3,4 @@ min_video_duration: 2  # minimum video length in minutes
 number_of_topics: 3
 recent_videos_days_old: 7
 first_issue_date: "2023-11-01"
-timezone: "Europe/Paris"
+timezone: Europe/Paris
