--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pendulum = "^2.1.2"
 boto3 = "^1.28.71"
 mailchimp-marketing = "^3.0.80"
 tqdm = "^4.66.1"
+tenacity = "^8.2.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
