--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,11 +23,11 @@ repos:
       - id: ruff
         args: [--fix]
       - id: ruff-format
-  - repo: https://github.com/DavidAnson/markdownlint-cli2
-    rev: v0.10.0
-    hooks:
-      - id: markdownlint-cli2
-        args: [--fix]
+  # - repo: https://github.com/DavidAnson/markdownlint-cli2
+  #   rev: v0.10.0
+  #   hooks:
+  #     - id: markdownlint-cli2
+  #       args: [--fix]
   - repo: https://github.com/python-poetry/poetry
     rev: 1.7.0
     hooks:
