:wrench: Updated config
Added send_weeday as a parameter, more channels and some comments in config

--- a/config/channels_id.yaml
+++ b/config/channels_id.yaml
@@ -3,3 +3,5 @@
 - UCciQ8wFcVoIIMi-lfu8-cjQ  # Anton Petrov
 - UCIBaDdAbGlFDeS33shmlD0A  # European Space Agency, ESA
 - UCxzC4EngIsMrPmbm6Nxvb-A  # Scott Manley
+# - UCQkLvACGWo8IlY1-WKfPp6g  # Deep Astronomy
+# - UCvBqzzvUBLCs8Y7Axb-jZew  # Sixty Symbols
