--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+AWS_ACCESS_KEY_ID=xxxxxxxx
+AWS_SECRET_ACCESS_KEY=xxxxxxxx
+AWS_REGION=xxxxxxxx
 GOOGLE_API_KEY=xxxxxxxx
 OPENAI_API_KEY=xxxxxxxx
 MAILCHIMP_API_KEY=xxxxxxxx
