--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         run: poetry export -f requirements.txt --output requirements.txt --without-hashes
 
   AssumeRoleAndPush:
+    needs: ExportDependencies
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
