:green_heart: Merging CI jobs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ permissions:
       id-token: write   # This is required for requesting the JWT
       contents: read    # This is required for actions/checkout
 jobs:
-  ExportDependencies:
+  Deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
@@ -28,13 +28,6 @@ jobs:
           cache: 'poetry'
       - name: Export requirements.txt
         run: poetry export -f requirements.txt --output requirements.txt --without-hashes
-
-  AssumeRoleAndPush:
-    needs: ExportDependencies
-    runs-on: ubuntu-latest
-    steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v4
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4.0.1
         with:
