--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,10 @@ jobs:
         run: |
           docker build --platform linux/amd64 -t $ECR_REGISTRY/inews:latest .
           docker push $ECR_REGISTRY/inews:latest
+      - name: Updating lambda
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
           aws lambda update-function-code \
             --function-name inews \
-            --image-uri $ECR_REGISTRY }}/inews:latest > /dev/null
+            --image-uri $ECR_REGISTRY/inews:latest > /dev/null
