--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
     env:
       POETRY_VERSION: 1.7.1
       POETRY_EXPORT_VERSION: 1.6.0
-      POETRY_HOME: ~/.local/bin/
-      POETRY: ~/.local/bin/bin/poetry
+      POETRY_HOME: /home/runner/.local/bin/
+      POETRY: /home/runner/.local/bin/bin/poetry
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
@@ -36,7 +36,7 @@ jobs:
         if: steps.req-cache.outputs.cache-hit != 'true'
         uses: actions/cache@v3
         with:
-          path: ~/.local/bin/
+          path: ${{ env.POETRY_HOME }}
           key: poetry-${{ env.POETRY_VERSION }}-${{ env.POETRY_EXPORT_VERSION }}
 
       - name: Install Poetry
