--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,17 @@ jobs:
       POETRY_EXPORT_VERSION: 1.6.0
       POETRY_HOME: /home/runner/.local/bin/
       POETRY: /home/runner/.local/bin/bin/poetry
+      PROJECT_NAME: inews
+      STAGE: ${{ github.ref_name == 'main' && 'prod' || 'dev' }}
     steps:
+      ###############################################
+      # Checkout
+      ###############################################
       - name: Git clone the repository
         uses: actions/checkout@v4
 
-
       ###############################################
-      # Export requirements (cached)
+      # Export Requirements (cached)
       ###############################################
       - name: Cache requirements
         id: req-cache
@@ -56,12 +60,12 @@ jobs:
 
 
       ###############################################
-      # AWS authentications
+      # AWS Authentications
       ###############################################
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.IAM_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::976114805627:role/${{ env.PROJECT_NAME }}-${{ env.STAGE }}-github-actions
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: "eu-west-3"
 
@@ -71,7 +75,7 @@ jobs:
 
 
       ###############################################
-      # Build, push & deploy
+      # Build, Push & Deploy
       ###############################################
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -82,7 +86,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         with:
-          images: ${{ env.ECR_REGISTRY }}/inews
+          images: ${{ env.ECR_REGISTRY }}/${{ env.PROJECT_NAME }}-${{ env.STAGE }}
           tags: type=semver,pattern={{raw}}
 
       - name: Build and push
@@ -101,5 +105,6 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           aws lambda update-function-code \
-            --function-name inews \
-            --image-uri $ECR_REGISTRY/inews:${{github.ref_name}} > /dev/null
+            --function-name ${{ env.PROJECT_NAME }}-${{ env.STAGE }} \
+            --image-uri $ECR_REGISTRY/${{ env.PROJECT_NAME }}-${{ env.STAGE }}:${{github.ref_name}} \
+            > /dev/null
