--- a/.github/workflows/update_caches.yml
+++ b/.github/workflows/update_caches.yml
@@ -1,16 +1,14 @@
-name: Deploy Code
+name: Update Caches
 
 on:
   push:
-    branches: [ dev ]
-    tags:
-      - "v*.*.*"
+    branches: [ main ]
 
 permissions:
       id-token: write   # This is required for requesting the JWT
       contents: read    # This is required for actions/checkout
 jobs:
-  Deploy:
+  UpdateCaches:
     runs-on: ubuntu-latest
     env:
       POETRY_VERSION: 1.7.1
@@ -18,7 +16,6 @@ jobs:
       POETRY_HOME: /home/runner/.local/bin/
       POETRY: /home/runner/.local/bin/bin/poetry
       PROJECT_NAME: inews
-      STAGE: ${{ startsWith(github.ref, 'refs/tags/v') && 'prod' || github.ref_name == 'dev' && 'dev' }}
     steps:
       ###############################################
       # Checkout
@@ -26,13 +23,12 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v4
 
-
       ###############################################
-      # Export Requirements (cached)
+      # Cache Poetry & Requirements
       ###############################################
       - name: Cache requirements
         id: req-cache
-        uses: actions/cache/restore@v3
+        uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/requirements.txt
           key: requirements-${{ hashFiles('poetry.lock') }}
@@ -40,7 +36,7 @@ jobs:
       - name: Cache Poetry installation
         id: poetry-cache
         if: steps.req-cache.outputs.cache-hit != 'true'
-        uses: actions/cache/restore@v3
+        uses: actions/cache@v3
         with:
           path: ${{ env.POETRY_HOME }}
           key: poetry-${{ env.POETRY_VERSION }}-${{ env.POETRY_EXPORT_VERSION }}
@@ -62,53 +58,24 @@ jobs:
 
 
       ###############################################
-      # AWS Authentications
+      # Cache Image Build
       ###############################################
-      - name: Configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::976114805627:role/${{ env.PROJECT_NAME }}-${{ env.STAGE }}-github-actions
-          role-session-name: GitHub_to_AWS_via_FederatedOIDC
-          aws-region: "eu-west-3"
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-
-      # ###############################################
-      # # Build (cached), Push & Deploy
-      # ###############################################
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         with:
-          images: ${{ env.ECR_REGISTRY }}/${{ env.PROJECT_NAME }}-${{ env.STAGE }}
-          tags: |
-            type=semver,pattern={{raw}},enable=${{ env.STAGE == 'prod' }}
-            type=raw,value=latest,enable=${{ env.STAGE == 'dev' }}
+          images: ${{ env.PROJECT_NAME }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
+          push: false
           provenance: false
           tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64
           cache-from: type=gha,scope=global
-
-      - name: Update Lambda code
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE: ${{ env.PROJECT_NAME }}-${{ env.STAGE }}
-          VERSION: ${{ steps.meta.outputs.version }}
-        run: |
-          aws lambda update-function-code \
-            --function-name ${{ env.PROJECT_NAME }}-${{ env.STAGE }} \
-            --image-uri ${{ env.ECR_REGISTRY }}/${{ env.IMAGE }}:${{ env.VERSION }} > /dev/null
+          cache-to: type=gha,mode=max,scope=global
