--- a/.github/workflows/update_caches.yml
+++ b/.github/workflows/update_caches.yml
@@ -69,7 +69,7 @@ jobs:
         with:
           images: ${{ env.PROJECT_NAME }}
 
-      - name: Build and push
+      - name: Build and cache
         uses: docker/build-push-action@v5
         with:
           context: .
